@@ -1,3 +1,7 @@
+2005-05-23  Darin Adler  <darin@apple.com>
+
+        * WebCore.exp: Sorted file for more readable diffs.
+
 2005-05-23  Adele Peterson  <adele@apple.com>
 
         Reviewed by Darin.
@@ -10,7 +14,7 @@
 
         Reviewed by Darin.
 
-		Prevent crash when going from no selection to selection with mispelling checks enabled.
+        Prevent crash when going from no selection to selection with mispelling checks enabled.
 		
         * kwq/KWQKHTMLPart.mm:
         (KWQKHTMLPart::markMisspellings):
